--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "files": [
     "lib/**"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.1.1"
+  }
 }
