--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.1.1"
+    "@mui/icons-material": "^5.1.1",
+    "@mui/material": "^5.1.1",
+    "mobx-react-lite": "^3.2.2"
   }
 }
