--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/react": "^16.9.46",
+    "@types/react": "^17.0.35",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^9.2.3",
     "tslint": "^6.1.3",
     "tslint-loader": "^3.5.4",
     "tslint-react": "^5.0.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.5.2",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.0"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.12.3",
     "react": "^17.0.1"
   },
   "files": [
@@ -37,6 +36,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "mobx-react-lite": "^3.2.2"
+    "@types/webpack": "^5.28.0"
   }
 }
