--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "@types/webpack": "^5.28.0"
+    "@types/webpack": "^5.28.0",
+    "react": "^17.0.2"
   }
 }
