fonts folder moved

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "noUnusedLocals": true,
     "typeRoots": [
       "./node_modules/@types",
-      "./typings"
+      "./typings",
+      "./src/types"
     ]
   },
   "diagnostics": true,
