--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mui/material": "^5.1.1",
     "@types/webpack": "^5.28.0",
     "file-loader": "^6.2.0",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
