--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "webpack -p --progress --colors --optimize-minimize --config webpack.config.publishing.js",
-    "prepack": "tsc"
+    "prepack": "tsc",
+    "pack-copy": "yarn clean && tsc && yarn copy-files",
+    "clean": "rm -rf ./lib",
+    "copy-files": "cp -r ./src/assets/ ./lib/assets/"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/material": "^5.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react": "^17.0.35",
     "html-webpack-plugin": "^4.5.0",
+    "react": "^17.0.2",
     "ts-loader": "^9.2.3",
     "tslint": "^6.1.3",
     "tslint-loader": "^3.5.4",
@@ -25,20 +33,12 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.0"
   },
-  "peerDependencies": {
-    "react": "^17.0.1"
-  },
+  "peerDependencies": {},
   "files": [
     "lib/**"
   ],
   "dependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.1.1",
-    "@mui/material": "^5.1.1",
     "@types/webpack": "^5.28.0",
-    "file-loader": "^6.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "file-loader": "^6.2.0"
   }
 }
