--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "webpack -p --progress --colors --optimize-minimize --config webpack.config.publishing.js",
+    "build": "webpack --mode production --progress --color --config webpack.config.publishing.js",
     "prepack": "tsc",
     "pack-copy": "yarn clean && tsc && yarn copy-files",
     "clean": "rm -rf ./lib",
@@ -24,6 +24,7 @@
     "@types/react": "^17.0.35",
     "html-webpack-plugin": "^4.5.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-loader": "^9.2.3",
     "tslint": "^6.1.3",
     "tslint-loader": "^3.5.4",
