--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "file-loader": "^6.2.0",
     "mobx": "^6.3.8",
     "moment": "^2.29.1",
-    "nanoid": "^3.1.30"
+    "nanoid": "^3.1.30",
+    "react-select": "^5.4.0"
   }
 }
